Ingress-angular.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: zpl-cmm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /myapp(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 80
